# env-alert-system

./: .clang-format  CMakeLists.txt  Dockerfile  Dockerfile_old  README.md  prj.conf  west.yml
src/: CMakeLists.txt  alert_condition.c  alert_condition.h  alert_conditions.c  alert_conditions.h  alert_raiser.c  current_humidity.c  current_humidity.h  current_light_intensity.c  current_pressure.c  current_temperature.h  humidity_requirement.c  humidity_requirement_list.h  humidity_value.c  humidity_value.h  light_intensity_requirement.c  light_intensity_value.c  light_intensity_value.h  linked_list_node_allocator.c  linked_list_node_allocator.h  pressure_requirement.c  pressure_value.c  pressure_value.h  temperature_requirement.c  temperature_requirement.h  temperature_requirement_list.h  temperature_value.c  temperature_value.h  value_holder.c  value_holder.h  variable_requirement.c  variable_requirement.h  variable_requirement_allocator.c  variable_requirement_allocator.h  variable_requirement_defs.h  variable_requirement_evaluator.c  variable_requirement_list.c  variable_requirement_list.h  variable_requirement_private.h
src/app/: CMakeLists.txt  alert_condition.h  alert_condition_defs.h  alert_conditions.c  alert_conditions.h  alert_evaluation_readiness.c  alert_evaluation_readiness.h  alert_notifier.c  alert_notifier.h  alert_raiser.c  alert_raiser.h  alert_raiser_defs.h  alert_raisers.c  alert_raisers.h  connectivity_notification_sender.c  connectivity_notification_sender.h  connectivity_notifier.c  connectivity_notifier.h  current_humidity.h  current_light_intensity.h  current_pressure.h  current_temperature.c  current_temperature.h  humidity_requirement.c  humidity_requirement.h  humidity_requirement_list.c  humidity_requirement_list.h  humidity_value.h  led_controller.c  led_controller.h  led_manager.c  led_manager.h  led_manager_private.h  led_notification_executor.c  led_notification_executor.h  led_notifier.c  led_notifier.h  led_setter.c  led_setter.h  light_intensity_requirement.c  (+25 more)
src/app/config/: config.h
src/app/glue/: CMakeLists.txt  alert_adder.c  alert_adder.h  alert_remover.c  alert_remover.h  alert_validator.c  alert_validator.h  central_event_queue.c  central_event_queue.h  eas_timer_callback_executor.c  eas_timer_callback_executor.h  new_sample_callbacks.c  new_sample_callbacks.h  new_sample_handler.c  new_sample_handler.h
src/app/glue/event_handlers/: CMakeLists.txt  init_handler.c  init_handler.h  (+2 more)
src/app/hal/: humidity.h  hw_platform.h  led.h  led_defs.h  light_intensity.h  pressure.h  temperature.h
src/app/interfaces/: CMakeLists.txt
src/app/middleware/: CMakeLists.txt  msg_transceiver.c  msg_transceiver.h
src/app/port-interfaces/: CMakeLists.txt  eas_current_time.h  eas_timer.h  eas_timer_defs.h  led_notification_allocator.h  linked_list_node_allocator.h  variable_requirement_allocator.h
src/app/utils/: CMakeLists.txt  eas_time.c  eas_time.h  eas_time_defs.h  linked_list.c  linked_list.h  linked_list_private.h  util.h
src/hal/: CMakeLists.txt  humidity.h  light_intensity.h  pressure.h  temperature.h
src/hal/def/: humidity.h  humidity_sensor.h  hw_platform.h  led.h  led_defs.h  light_intensity.h  light_intensity_sensor.h  pressure.h  pressure_sensor.h  temperature.h  temperature_sensor.h  transceiver.h
src/hal/nrf52840dk/: CMakeLists.txt  hw_platform.c  hw_platform_private.h  led_nrf52840.h  transceiver.c
src/hal/unit-test-off-target/: CMakeLists.txt  mock_transceiver.h
src/interfaces/: CMakeLists.txt
src/interfaces/defs/: eas_assert.h  eas_log.h
src/port/: CMakeLists.txt
src/port/nrf52840dk/: CMakeLists.txt  main.c  prj.conf  sensirion_sht3x.cmake
src/port/prod-fw/: CMakeLists.txt
src/port/unit-test-off-target/: CMakeLists.txt
src/utils/: CMakeLists.txt  linked_list.c  linked_list.h  linked_list_private.h  ops_queue.c  ops_queue.h  util.h
src/virtual_devices/: virtual_bh1750.c  virtual_bh1750.h  virtual_bmp280.c  virtual_bmp280.h  virtual_led_mock.cpp  virtual_led_mock.h  virtual_led_nrf52840.c  virtual_led_nrf52840.h  virtual_sht31.c  virtual_sht31.h  virtual_transceiver_mock.cpp  virtual_transceiver_mock.h  virtual_transceiver_nrf_ble.c  virtual_transceiver_nrf_ble.h
src/virtual_devices/nrf_ble/: transmit_cb_data_allocator.c  transmit_cb_data_allocator.h  transmit_cb_data_def.h  virtual_transceiver_nrf_ble.c  virtual_transceiver_nrf_ble.h
test/: CMakeLists.txt  main.cpp  temperature_value.cpp  value_holder.cpp
test/app/exec1/: CMakeLists.txt  linked_list.cpp
test/app/exec2/: CMakeLists.txt  pressure_requirement.c
test/exec1/: CMakeLists.txt  current_humidity.cpp  current_pressure.cpp  current_temperature.cpp  linked_list.cpp  value_holder.cpp
test/exec1/mocks/: mock_humidity_value.cpp  mock_light_intensity_value.h  mock_pressure_value.h  mock_temperature_value.cpp
test/exec2/: CMakeLists.txt  humidity_requirement.c  humidity_requirement.cpp  humidity_value.cpp  light_intensity_requirement.c  light_intensity_requirement.cpp  light_intensity_value.cpp  pressure_requirement.c  pressure_requirement.cpp  pressure_value.cpp  temperature_requirement.c  temperature_requirement.cpp  temperature_value.cpp  variable_requirement.cpp
test/exec2/mocks/: mock_current_humidity.cpp  mock_current_light_intensity.h  mock_current_pressure.h  mock_current_temperature.cpp  mock_value_holder.cpp  mock_value_holder.h  mock_variable_requirement_allocator.cpp  mock_variable_requirement_allocator.h
test/execs/exec1/: main.cpp
test/execs/exec2/: CMakeLists.txt  alert_condition.cpp  led_controller.cpp  led_manager.cpp  msg_transceiver.c  msg_transceiver_no_setup.c  msg_transceiver_no_setup.cpp  ops_queue.cpp  ops_queue_complex_op.cpp  variable_requirement.cpp  variable_requirement_list.cpp
test/execs/internal/: CMakeLists.txt
test/internal/: CMakeLists.txt  fake_linked_list_node_allocator.c  fake_variable_requirement.c  fake_variable_requirement.h  fake_variable_requirement_allocator.c  memory_block_allocator.h
test/port/: CMakeLists.txt  main.cpp  memory_block_allocator.cpp
test/zephyr-minimal/: CMakeLists.txt
(+346 files in other folders)
